objects/Exemption_Log__c.object
<CustomObject>
    <label>Exemption Log</label>
    <pluralLabel>Exemption Logs</pluralLabel>
    <nameField>
        <label>Exemption Log Name</label>
        <type>Text</type>
        <fullName>Name</fullName>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Agent__c</fullName>
        <label>Agent</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>